<resources>
    <string name="app_name">Takip</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Giris</string>
    <!-- Strings related to login -->
    <string name="prompt_email">E-posta</string>
    <string name="prompt_password">Sifre</string>
    <string name="action_sign_in">Giris</string>
    <string name="action_sign_in_short">Giris</string>
    <string name="error_invalid_email">E-posta adresi yanlis</string>
    <string name="error_invalid_password">Sifre cok kisa</string>
    <string name="error_incorrect_password">Sifre yanlis</string>
    <string name="error_field_required">Doldurulmasi gerekiyor</string>

    <!-- Strings related to recycle manager -->
    <string name="fragment_recycle_manager_recyle_product">Ürün geri dönüş alisi</string>
    <string name="fragment_recycle_manager_quantity">Adet</string>
    <string name="fragment_recycle_manager_barcode">Kod</string>

    <!-- Strings related to producer manager -->
    <string name="fragment_producer_code">Takip</string>
    <string name="fragment_producer_quantity">Adet</string>
    <string name="fragment_producer_barcode">Kod</string>
    <string name="fragment_producer_add">Ekle</string>
    <string name="fragment_producer_new_name">Isim</string>
    <string name="fragment_producer_add_new_product">Urun Ekle</string>
    <string name="fragment_producer_new_product">Yeni Urun</string>
    <string name="fragment_producer_add_new_product_button">Yeni Urun Ekle</string>
    <string name="fragment_producer_info">Siradaki 2 secenekten birisini secin lutfen</string>




    <!-- Strings related to supplier manager -->
    <string name="fragment_supplier_code">Takip</string>
    <string name="fragmentsupplier_quantity">Adet</string>
    <string name="fragment_supplier_barcode">Kod</string>
    <string name="fragment_supplier_Product_text">Urun Satisi</string>
    <string name="fragment_supplier_buyer">Alici</string>
    <string name="fragment_supplier_sell_done_button">Satisi Tamamla</string>
    <string name="fragment_supplier_product_feedback">Urun Geri Donusum</string>
    <string name="fragment_supplier_product_add_bertaraf">Bertaraf Ekle</string>
    <string name="fragment_supplier_product_buy_product">Urun Satin Al</string>
    <string name="fragment_supplier_product_add_product_to_store_button">Urunleri Depoya Ekle</string>
    <string name="fragment_supplier_info">Siradaki 3 secenekten birisini secin lutfen</string>


        <string name="ok">OK</string>
        <string name="permission_camera_rationale">Algılama için kameraya erişimi gerekiyorn</string>
        <string name="no_camera_permission">Kamera izni olmadığı için bu uygulama çalıştırılamıyor. Uygulama şimdi kapatilacak.</string>
        <string name="low_storage_error">Yüz dedektörü bağımlılıkları düşük cihaz depolama nedeniyle olamaz</string>
        <string name="title_activity_main">Barkod Okuyucu</string>
        <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
        <string name="read_barcode">Barkod oku</string>
        <string name="auto_focus">Auto Focus</string>
        <string name="use_flash">Flaş kullan</string>
        <string name="barcode_success">Barkod başarıyla okundu</string>
        <string name="barcode_failure">Okunan barkod yok</string>
        <string name="barcode_error">"Barkod okunurken hata oluştu: %1$s"</string>
</resources>
