<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_recycle_manager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".scenes.RecycleManagerFragment">

    <!-- TODO: Update blank fragment layout -->


    <EditText
        android:id="@+id/editTextProductCount"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/fragment_recycle_manager_quantity"
        android:inputType="number"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />


    <Button
        android:id="@+id/fragment_product_bardcode_scan_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@mipmap/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fragment_recycle_manager_editTextBarcode"
        app:layout_constraintTop_toBottomOf="@+id/editTextProductCount" />

    <EditText
        android:id="@+id/fragment_product_editTextBarcode"
        android:layout_width="208dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/fragment_producer_code"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/fragment_product_bardcode_scan_iv"
        app:layout_constraintStart_toStartOf="@+id/editTextProductCount"
        app:layout_constraintTop_toBottomOf="@+id/editTextProductCount" />


    <Button
        android:id="@+id/fragment_product_doneButton"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/fragment_producer_add_new_product_button"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="5dp"
            android:text="@string/fragment_producer_info"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"

            android:text="@string/fragment_producer_add_new_product"/>

        <EditText
            android:id="@+id/editText_add_product_quantity"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/fragment_producer_quantity"
            android:inputType="number" />

        <Button
            android:id="@+id/producer_btn_add"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/fragment_producer_add"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="15dp"
            android:text="@string/fragment_producer_new_product"/>

        <EditText
            android:id="@+id/editText_new_product_name"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/fragment_producer_new_name"
            android:inputType="number" />





    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0625" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9791667" />


</android.support.constraint.ConstraintLayout>