<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".scenes.RecycleManagerFragment"
    android:id="@+id/fragment_recycle_manager">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/fragment_recycle_manager_recyle_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextProductCount"
        android:layout_height="48dp"
        android:layout_width="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/fragment_recycle_manager_quantity"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
         />


    <Button
        android:id="@+id/fragment_recycle_manager_bardcode_scan_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fragment_recycle_manager_editTextBarcode"
        app:layout_constraintTop_toBottomOf="@+id/editTextProductCount"
        android:background="@mipmap/ic_launcher_foreground"/>

    <EditText
        android:id="@+id/fragment_recycle_manager_editTextBarcode"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/fragment_recycle_manager_barcode"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/editTextProductCount"
        app:layout_constraintEnd_toStartOf="@+id/fragment_recycle_manager_bardcode_scan_iv"
        app:layout_constraintTop_toBottomOf="@+id/editTextProductCount" />



    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="Tamamla"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>